--- a/docs/sc/020/sc20.tex
+++ b/docs/sc/020/sc20.tex
@@ -1,558 +1,37 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[11pt,oneside,chapters]{starlink}
 
-% ? Specify used packages
-\usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
-\usepackage{array}
-\usepackage{fancyhdr}
-\usepackage{multirow}
-\usepackage{longtable}
-\usepackage{color}
-\usepackage{caption}
-\usepackage{titlesec}
-\usepackage{enumitem}
-% ? End of specify used packages
-\pagestyle{myheadings}
-\listfiles
-% -----------------------------------------------------------------------------
+\usepackage{amsfonts}
 
-% ? Document identification
-\newcommand{\stardoccategory}  {Starlink Cookbook}
-\newcommand{\stardocinitials}  {SC}
-\newcommand{\stardocsource}    {sc\stardocnumber}
-\newcommand{\stardoccopyright} {Copyright \copyright\ 2014 Science and Technology Facilities Council}
-\newcommand{\stardocnumber}    {20.0}
-\newcommand{\stardocauthors}   {H.\ S.\ Thomas}
-\newcommand{\stardocdate}      {1 September 2014}
-\newcommand{\stardoctitle}     {The Heterodyne Data Reduction Cookbook}
-\newcommand{\stardocversion}   {1.1}
-\newcommand{\stardocmanual}    {\ }
-\newcommand{\stardocabstract}  {
+\stardoccategory    {Starlink Cookbook}
+\stardocinitials    {SC}
+\stardocsource      {sc\stardocnumber}
+\stardoccopyright   {Copyright \copyright\ 2014 Science and Technology Facilities Council}
+\stardocnumber      {20.0}
+\stardocauthors     {H.\ S.\ Thomas}
+\stardocdate        {1 September 2014}
+\stardoctitle       {The Heterodyne Data Reduction Cookbook}
+\stardocversion     {1.1}
+\stardocmanual      {\ }
+\stardocabstract    {
+      This cookbook provides a short introduction to Starlink
+      facilities, especially \textsc{Smurf}, the Sub-Millimetre User
+      Reduction Facility and \textsc{Kappa}, the Kernel Application
+      Package, for reducing, displaying, and analysing ACSIS data. In
+      particular, this cookbook illustrates the various steps required
+      to reduce the data; and gives an overview of the ORAC-DR
+      pipeline which carries out many of these steps using a single
+      command. Specialised pipeline recipes are discussed.}
 
-   This cookbook provides a short introduction to Starlink facilities,
-   especially \textsc{Smurf}, the Sub-Millimetre User Reduction
-   Facility and \textsc{Kappa}, the Kernel Application Package, for reducing, displaying,
-   and analysing ACSIS data.
-   In particular, this cookbook illustrates the various steps required to reduce the data;
-   and gives an overview of the ORAC-DR pipeline which carries out many of these
-   steps using a single command. Specialised pipeline recipes are discussed.}
-
-% ? End of document identification
-
-% -----------------------------------------------------------------------------
-
-% +
-%  Name:
-%     sc.tex
-%
-%  Purpose:
-%     Template for Starlink Cookbook (SC) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     16-JUN-1997 (BLY):
-%        Original, based on SUN/SG templates.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%      1-FEB-2000 (AJC):
-%        Add Copyright statement in LaTeX
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-
-% Include special HTML versions of commands.
-
-\newcommand{\eg}{{\it e.g.}}
-\newcommand{\ie}{{\it i.e.}}
-
-\newsavebox{\fmbox}
-
-% set up description list environment called 'sldes' which has a label taking up 15% of the space on the left - thanks to Sarah Graves for the suggestion.
-%\newlist{sldes}{description}{2}
-%\setlist[sldes,1,2]{style=nextline, leftmargin=15\textwidth}
-
-%  For the TIP boxes.
-\newenvironment{fmpage}[1]{\begin{lrbox}{\fmbox}\begin{minipage}{#1}}{\end{minipage}\end{lrbox}\fbox{\usebox{\fmbox}}}
-
-%  Define additional colours.
-\definecolor{gray}{RGB}{200,200,200}
-\definecolor{MidnightBlue}{rgb}{0.1, 0.1, 0.44}
-\definecolor{bblue}{RGB}{172,207,230}
-
-%  A new environment for quoting verbatim
-%  Environment for indenting and using a small font.
-\newenvironment{myquote}{
-   \color{MidnightBlue}\begin{quote}\begin{small}}{
-   \end{small}\end{quote}
-}
-
-%\renewcommand{\familydefault}{\sfdefault}
-
-%  This is for coloured banners in section titles.
-\newcommand{\colorsection}[1]{%
-  \colorbox{bblue}{\parbox{\dimexpr\textwidth-2\fboxsep}{\vspace{0.02cm}\hspace{0.01cm}\thesubsection\vspace{0.01cm}\hspace{0.4cm} #1}}}
-
-\titleformat{name=\subsection}[block]
-  {\rmfamily\Large\bfseries}
-  {}
-  {0pt}
-  {\colorsection}
-\titlespacing*{\subsection}{0pt}{20pt}{\baselineskip}
-
-
-%  Shortcuts
-%  ---------
-
-% Typographical shortcuts
-\newcommand{\fcfbe}{$\mathrm{FCF_{beamequiv}}$}
-\newcommand{\fcfb}{$\mathrm{FCF_{beam}}$}
-\newcommand{\fcfa}{$\mathrm{FCF_{arcsec}}$}
-\newcommand{\fcfm}{$\mathrm{FCF_{match}}$}
-
-% SCUBA reference
-%\newcommand{\scuba}{\htmladdnormallink{SCUBA}{http://www.jach.hawaii.edu/JCMT/}}
-
-% Starlink Package name
-\newcommand{\starlink}{\htmladdnormallink{Starlink}{http://starlink.jach.hawaii.edu}}
-
-% Set up some common package names.
-\newcommand{\ccdpack}{\xref{\textsc{Ccdpack}}{sun139}{}}
-\newcommand{\convert}{\xref{\textsc{Convert}}{sun55}{}}
-\newcommand{\cupid}{\xref{\textsc{Cupid}}{sun255}{}}
-\newcommand{\Figaro}{\xref{\textsc{Figaro}}{sun86}{}}
-\newcommand{\fluxes}{\xref{\textsc{Fluxes}}{sun213}{}}
-\newcommand{\gaia}{\xref{\textsc{Gaia}}{sun214}{}}
-\newcommand{\Kappa}{\xref{\textsc{Kappa}}{sun95}{}}
-\newcommand{\agi}{\xref{AGI}{sun48}{}}
-\newcommand{\ndf}{\xref{NDF}{sun33}{}}
-\newcommand{\surf}{\xref{\textsc{Surf}}{sun216}{}}
-\newcommand{\jcmtdr}{\xref{\textsc{JCMTdr}}{sun132}{}}
-\newcommand{\oracdr}{\htmladdnormallink{\textsc{Orac-dr}}{http://www.oracdr.org/oracdr}}
-\newcommand{\photom}{\xref{\textsc{Photom}}{sun45}{}}
-\newcommand{\picard}{\xref{\textsc{Picard}}{sun265}{}}
-\newcommand{\smurf}{\xref{\textsc{Smurf}}{sun258}{}}
-\newcommand{\splat}{\xref{\textsc{Splat}}{sun243}{}}
-\newcommand{\ssds}{\xref{\textsc{Starlink Standard Data Structures}}{sgp38}{}}
-\newcommand{\topcat}{\htmladdnormallink{\textsc{Topcat}}{http://www.starlink.ac.uk/topcat}}
-
-% DR recipe names
-\newcommand{\drrecipe}[1]{\texttt{#1}}
-
-% Application tasks
-\newcommand{\task}[1]{\textsf{#1}}
-
-% ADAM parameters
-\newcommand{\param}[1]{\texttt{#1}}
-
-% Environment variables, filenames, URLs, and model names
-% These are the same at the moment but could be adjusted in one place.
-\newcommand{\envvar}[1]{\texttt{#1}}
-\newcommand{\file}[1]{\texttt{#1}}
-\newcommand{\model}[1]{\texttt{#1}}
-\newcommand{\url}[1]{\texttt{#1}}
-
-% GAIA menu functions and buttons.  Would like a bold texttt to mimic
-% their appearance in GAIA, but the founts are not in regular LaTeX.
-\newcommand{\gaiathing}[1]{\textbf{\textsf{#1}}}
-
-% SMURF tasks
-\newcommand{\jcmtstate}{\xref{\task{jcmtstate2cat}}{sun258}{JCMTSTATE2CAT}}
-\newcommand{\makecube}{\xref{\task{makecube}}{sun258}{MAKECUBE}}
-\newcommand{\unmakecube}{\xref{\task{unmakecube}}{sun258}{UNMAKECUBE}}
-
-
-% KAPPA
-\newcommand{\beamfit}{\xref{\task{beamfit}}{sun95}{BEAMFIT}}
-\newcommand{\cmult}{\xref{\task{cmult}}{sun95}{CMULT}}
-\newcommand{\fitslist}{\xref{\task{fitslist}}{sun95}{FITSLIST}}
-\newcommand{\chpix}{\xref{\task{chpix}}{sun95}{CHPIX}}
-\newcommand{\fitsval}{\xref{\task{fitsval}}{sun95}{FITSVAL}}
-\newcommand{\hislist}{\xref{\task{hislist}}{sun95}{HISLIST}}
-\newcommand{\histat}{\xref{\task{histat}}{sun95}{HISTAT}}
-\newcommand{\block}{\xref{\task{block}}{sun95}{BLOCK}}
-\newcommand{\chanmap}{\xref{\task{chanmap}}{sun95}{CHANMAP}}
-\newcommand{\clinplot}{\xref{\task{clinplot}}{sun95}{CLINPLOT}}
-\newcommand{\collapse}{\xref{\task{collapse}}{sun95}{COLLAPSE}}
-\newcommand{\contour}{\xref{\task{contour}}{sun95}{CONTOUR}}
-\newcommand{\display}{\xref{\task{display}}{sun95}{DISPLAY}}
-\newcommand{\fillbad}{\xref{\task{fillbad}}{sun95}{FILLBAD}}
-\newcommand{\gausmooth}{\xref{\task{gausmooth}}{sun95}{GAUSMOOTH}}
-\newcommand{\gdstate}{\xref{\task{gdstate}}{sun95}{GDSTATE}}
-\newcommand{\linplot}{\xref{\task{linplot}}{sun95}{LINPLOT}}
-\newcommand{\mfittrend}{\xref{\task{mfittrend}}{sun95}{MFITTREND}}
-\newcommand{\nomagic}{\xref{\task{nomagic}}{sun95}{NOMAGIC}}
-\newcommand{\histogram}{\xref{\task{histogram}}{sun95}{HISTOGRAM}}
+% Definitions
 \newcommand{\lutedit}{\xref{\task{lutedit}}{sun95}{LUTEDIT}}
-\newcommand{\makesnr}{\xref{\task{makesnr}}{sun95}{MAKESNR}}
-\newcommand{\fittrend}{\xref{\task{mfittrend}}{sun95}{MFITTREND}}
-\newcommand{\ndfcopy}{\xref{\task{ndfcopy}}{sun95}{NDFCOPY}}
-\newcommand{\ndftrace}{\xref{\task{ndftrace}}{sun95}{NDFTRACE}}
-\newcommand{\parget}{\xref{\task{parget}}{sun95}{PARGET}}
-\newcommand{\paste}{\xref{\task{paste}}{sun95}{PASTE}}
-\newcommand{\provshow}{\xref{\task{provshow}}{sun95}{PROVSHOW}}
-\newcommand{\setvar}{\xref{\task{setvar}}{sun95}{SETVAR}}
-\newcommand{\stats}{\xref{\task{stats}}{sun95}{STATS}}
-\newcommand{\sqorst}{\xref{\task{sqorst}}{sun95}{SQORST}}
-\newcommand{\sub}{\xref{\task{sub}}{sun95}{SUB}}
-\newcommand{\wcsframe}{\xref{\task{wcsframe}}{sun95}{WCSFRAME}}
-\newcommand{\wcsattrib}{\xref{\task{wcsattrib}}{sun95}{WCSATTRIB}}
-\newcommand{\wcsmosaic}{\xref{\task{wcsmosaic}}{sun95}{WCSMOSAIC}}
-\newcommand{\wcsalign}{\xref{\task{wcsalign}}{sun95}{WCSALIGN}}
-
-% CCDPACK
-\newcommand{\makemos}{\xref{\task{makemos}}{sun139}{MAKEMOS}}
-
-% CUPID
-\newcommand{\findback}{\xref{\task{findback}}{sun255}{FINDBACK}}
-\newcommand{\findclumps}{\xref{\task{findclumps}}{sun255}{FINDCLUMPS}}
-
-% Misc
-\newcommand{\autophotom}{\xref{\task{autophotom}}{sun45}{AUTOPHOTOM}}
-\newcommand{\fitstondf}{\xref{\task{fits2ndf}}{sun55}{FITS2NDF}}
-\newcommand{\hdstrace}{\xref{\task{hdstrace}}{sun95}{HDSTRACE}}
-
-% Documents
-\newcommand{\gaiasun}{\xref{\textbf{SUN/214}}{sun214}{}}
-\newcommand{\ccdpacksun}{\xref{\textbf{SUN/139}}{sun139}{}}
-\newcommand{\kappasun}{\xref{\textbf{SUN/95}}{sun95}{}}
-\newcommand{\picardsun}{\xref{\textbf{SUN/265}}{sun265}{}}
-\newcommand{\pipelinesun}{\xref{\textbf{SUN/260}}{sun264}{}}
-\newcommand{\smurfsun}{\xref{\textbf{SUN/258}}{sun258}{}}
-\newcommand{\convertsun}{\xref{\textbf{SUN/55}}{sun55}{}}
-\newcommand{\cupidsun}{\xref{\textbf{SUN/255}}{sun255}{}}
-\newcommand{\oracdrsun}{\xref{\textbf{SUN/230}}{sun230}{}}
-\newcommand{\hdstracesun}{\xref{\textbf{SUN/102}}{sun102}{}}
-\newcommand{\gaiasc}{\xref{\textbf{SC/17}}{sc17}{}}
-\newcommand{\splatsun}{\xref{\textbf{SUN/243}}{sun243}{}}
-
-% Chapter title in the header. This is using package fancyhdr.
-\pagestyle{fancy}
-\renewcommand{\sectionmark}[1]{\markboth{\stardocname---#1}{\stardocname---#1}}
-\renewcommand{\subsectionmark}[1]{}
-\renewcommand{\headrulewidth}{0pt}
-\lhead{\thepage}
-\fancyfoot[c]{}
-\fancyfoot[r]{}
-
-% Figure environment. Defined for latex2html to produce good quality
-% graphics in the hypertext. It assumes that the files are
-% encapsulated PostScript with extension .eps, and PNG with extension
-% .png. The arguments are: #1 graphics filename without an extension;
-% #2 figure environment location including brackets, or leave empty for
-% none; #3 the includegraphics % qualifiers; #4 the label; #5 is the
-% short caption for the index of figures; and #6 is the full caption.
-\newcommand{\myfig}[6]{
-  \begin{figure}#2
-    \centering\includegraphics[#3]{#1}
-    \typeout{#1 inserted on page \arabic{page}}
-    \caption[#5]{\label{#4}\small #6}
-  \end{figure}
-}
-\begin{htmlonly}
-  \newcommand{\myfig}[6]{
-    \label{#4} \htmladdimg{#1.png}\\
-    \\
-    Figure: #6\\
-  }
-\end{htmlonly}
-
-% Address twin (side-by-side) graphics in a similar fashion where the
-% second argument is the second graphic, and the remaining arguments
-% incremented by one slot save an extra argument #6 for the size of
-% the gap between the two graphics, thus #7 and #8 are the captions.
-\newcommand{\myfigduo}[8]{
-  \begin{figure}#3
-    \includegraphics[#4]{#1}
-    \typeout{#1 inserted on page \arabic{page}}
-    \hspace{#6}
-    \includegraphics[#4]{#2}
-    \typeout{#2 inserted on page \arabic{page}}
-    \caption[#7]{\label{#5}\small #8}
-  \end{figure}
-}
-\begin{htmlonly}
-  \newcommand{\myfigduo}[8]{
-    \label{#5} \htmladdimg{#1.png}\htmladdimg{#2.png}\\
-    \\
-    Figure: #8\\
-  }
-\end{htmlonly}
-
-% A command to cross-reference in both LaTeX and hypertext.
-% #1 is the type such as Section, Table, Figure; #2 is
-% the label; and #3 is the text or title associated with the
-% reference.
-\newcommand{\cref}[3]{\latexhtml{#1~\ref{#2}}{\htmlref{#3}{#2}}}
-
-%  LaTex2HTML has a problem with coloured text swapping it from
-%  the \myquote context to the main text.
-
-\begin{htmlonly}
-   \renewenvironment{myquote}{
-      \begin{quote}\begin{small}}{
-      \end{small}\end{quote}
-   }
-\end{htmlonly}
 
 
-% ? End of document specific commands
-% -----------------------------------------------------------------------------
-%  Title Page
-%  ==========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
+\scfrontmatter
 
-%  Latex document header
-%  =====================
-\begin{latexonly}
-   \textsc{Joint Astronomy Centre} \hfill \textbf{\stardocname}\\
-   {\large Science \& Technology Facilities Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf{\stardoctitle \\ [2.5ex]}}
-   {\LARGE\textbf{\stardocversion \\ [4ex]}}
-   {\Huge\textbf{\stardocmanual}}
-   \end{center}
-   \vspace{5mm}
+% Acronyms section
+\Acronyms
 
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-   \begin{center}
-%   \includegraphics[scale=0.4]{sc21_s2logo}
-   \end{center}
-   \vspace{5mm}
-   \rule{\textwidth}{0.5mm}\\
-   \vspace{15mm}
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\textbf{Abstract}}
-   \end{center}
-% ? End of heading for abstract.
-
-\end{latexonly}
-
-%  HTML documentation header
-%  =========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.5]{filename.ps}
-%   \includegraphics[width=90mm]{sc21_s2logo}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{Joint Astronomy Centre}
-                        {http://www.jach.hawaii.edu}\\
-      \htmladdnormallink{Science \& Technology Facilities Council}
-                        {http://www.scitech.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents
-%  ===============================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-%  Document Abstract
-%  =================
-\stardocabstract
-% ? End of document abstract
-
-% -----------------------------------------------------------------------------
-%  Latex Copyright Statement
-%  =========================
-\begin{latexonly}
-  \newpage
-  \vspace*{\fill}
-  \stardoccopyright
-\end{latexonly}
-% ? End of Latex copyright statement
-
-% -----------------------------------------------------------------------------
-%  Latex document Table of Contents
-%  ================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \newpage
-    \listoffigures
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-
-% -----------------------------------------------------------------------------
-
-%  Glossary
-%  ========
-\newpage
-\begin{latexonly}
-\addcontentsline{toc}{section}{Acronyms}
-% ? Heading for glossary if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\textbf{Acronyms}}
-   \end{center}
-% ? End of heading for glossary.
-\setlength{\extrarowheight}{3pt}
 \begin{table}[h!]
 \begin{tabular}{ll}
 
@@ -576,30 +55,6 @@
 \textbf{WVM}& Water Vapour radioMeter\\
 \end{tabular}
 \end{table}
-
-\end{latexonly}
-
-% -----------------------------------------------------------------------------
-
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
-
-%  This is for chapter-like headings.  It must come after the tables of
-%  contents and figures to avoid these having a zero chapter number
-%  appearing.  The comments before the \begin{latexonly} and
-%  \begin{latexonly} environment must be retained for the definitions
-%  to persist outside this block.  See MUD/152, p38.
-%  Despite the latexonly environment, this causes the HTML some grief
-%  and creates < section headings.
-%\begin{latexonly}
-  \titleformat{\section}[display]
-     {\normalfont\huge\bfseries}
-      {}
-     {0pt}
-     {Chapter \thesection\newline}
-     \titlespacing*{\section}{0pt}{0pt}{20pt}
-%\end{latexonly}
 
 
 \section{\xlabel{introduction}Introduction}
@@ -908,10 +363,6 @@ TIP: The `.sdf' extension on filenames is not required when running Starlink com
 \end{center}
 \end{latexonly}
 
-\begin{htmlonly}
-\textbf{TIP: The `.sdf' extension on filenames is not required when running Starlink commands.\\*\\*}
-\end{htmlonly}
-
 
 \subsection{What has already been done to the data?}
 
@@ -1019,12 +470,6 @@ file in \gaia\ and change the built-in coordinates to PIXEL via
 \end{center}
 \end{latexonly}
 
-\begin{htmlonly}
-\textbf{TIP: To help identify your sub-region in pixel coordinates,
-open your file in \gaia\ and change the built-in coordinates to PIXEL
-via \gaiathing{Image-Analysis}$>$ \gaiathing{Change coordinate}$>$
-\gaiathing{Build-in coordinates}. \\*\\*}
-\end{htmlonly}
 
 \newpage
 \subsection{\xlabel{help}How to get help}
@@ -1120,12 +565,7 @@ view the metadata?}).
 \end{center}
 \end{latexonly}
 
-\begin{htmlonly}
-\textbf{TIP: Both $T_{sys}$ and $T_{rec}$ are stored in the raw data
-files. This information is located in the \texttt{.MORE.ACSIS.TRX}
-extension and can be viewed using \hdstrace\ (see
-\cref{Section}{sec:fitslist}{How can I view the metadata?}).\\*\\*}
-\end{htmlonly}
+\end{tip}
 
 
 \subsection{\xlabel{rxa}Heterodyne Instruments}
@@ -2031,12 +1471,6 @@ the advanced method outlined above.
 \end{center}
 \end{latexonly}
 
-\begin{htmlonly}
-\textbf{TIP: You can also use the \picard\ recipe
-CREATE\_MOMENTS\_MAPS. See \cref{Appendix}{app:picard}{Picard} for
-details.  This recipe follows the advanced method outlined
-above.\\*\\*}
-\end{htmlonly}
 
 
 \subsection{\xlabel{rebin}Main beam conversion}
@@ -2131,12 +1565,6 @@ files until it runs out of resources.
 \end{center}
 \end{latexonly}
 
-\begin{htmlonly}
-\textbf{TIP: Take care not to combine data separated on the sky as
-\wcsmosaic\ will attempt to create a vast cube that encompasses all
-the input files until it runs out of resources.\\*\\*}
-\end{htmlonly}
-
 
 \begin{latexonly}
 \begin{center}
@@ -2149,11 +1577,6 @@ will correctly combine all NDF extensions. See
 \end{center}
 \end{latexonly}
 
-\begin{htmlonly}
-\textbf{TIP: You can also use the \picard\ recipe
-MOSAIC\_JCMT\_IMAGES. This will correctly combine all NDF extensions.
-See \cref{Appendix}{app:picard}{Picard} for details. \\*\\*}
-\end{htmlonly}
 
 
 \subsection{\xlabel{Crop}Cropping your map}
@@ -2366,10 +1789,6 @@ using the error component.
 \end{center}
 \end{latexonly}
 
-\begin{htmlonly}
-\textbf{TIP: Remember the mean or median values will give you the
-noise when using the error component.\\*\\*}
-\end{htmlonly}
 
 \vspace{3mm}
 \textbf{Visualising the noise}\\
@@ -2409,10 +1828,6 @@ TIP: You can write out the error component into a new file using
 \end{center}
 \end{latexonly}
 
-\begin{htmlonly}
-\textbf{TIP: You can write out the error component into a new file
-using \ndfcopy. \texttt{\% ndfcopy map comp=err noisemap}}
-\end{htmlonly}
 
 
 \myfig{sc20_noimap}{[h!]}{width=0.6\linewidth}{fig:noisemap}{
@@ -3341,10 +2756,6 @@ created so long as the observation passes the QA check.
 \end{center}
 \end{latexonly}
 
-\begin{htmlonly}
-\textbf{TIP: Even if just a single observation is processed, a group
-file is created so long as the observation passes the QA check.\\*\\*}
-\end{htmlonly}
 
 \textbf{Why have multiple reduced files been generated?}\\*
 You will find the pipeline splits large reduced cubes (e.g. from
@@ -3936,9 +3347,6 @@ This sets how the upper and lower limits for the y-axis are defined.
 This example expands the minimum and maxiumum values by 15\% of the
 data range. In additional \param{extended}, the available options are
 \param{range}, \param{percentile} and \param{sigma}.
-%\begin{latexonly}
-%\newpage
-%\end{latexonly}
 
 \myfig{sc20_display4}{[h!]}{width=0.55\linewidth}{fig:display4}{
   Displaying a zoomed-in spectrum with \Kappa:\display.}{
@@ -4086,12 +3494,6 @@ application can distinguish it from the other options. E.g.
 \end{center}
 \end{latexonly}
 
-\begin{htmlonly}
-\textbf{TIP: You can abbreviate any of the command-line options so
-long as the application can distinguish it from the other options.
-E.g. \param{mode=histogram} can be abbreviated all the way to
-\param{mode=h}.\\*\\*}
-\end{htmlonly}
 
 
 \newpage
@@ -4104,134 +3506,6 @@ external file and called by the command line option \param{-recpars
 <params.ini>}. For an example recipe parameters file see
 \cref{Section}{sec:recpars}{Setting recipe parameters}. \\
 
-\begin{htmlonly}
-\begin{table}[h!]
-\begin{small}
-\begin{tabular}{|p{6.8cm}|p{8.6cm}|}
-\hline
-\textbf{Parameter} & \textbf{Description} \\
-\hline
-BASELINE\_ORDER     & The polynomial order to use when baselining cubes.\\
-
-BASELINE\_LINEARITY & If set to true, receptors with mostly or all non-linear
-                      baselines are excluded from the reduced products.\\
-
-BASELINE\_LINEARITY\_CLIP & This is used to reject receptors that have
-                            non-linear baselines.  It is the maximum number
-                            of standard deviations above the median rms
-                            deviations for which a detector's non-linearity
-                            is regarded as acceptable.\\
-
-BASELINE\_LINEARITY\_LINEWIDTH & This is used to reject receptors that have
-                                 non-linear baselines. It is the extent of the
-                                 source spectral line measured in km/s, which
-                                 is excluded from the non-linearity tests.\\
-
-BASELINE\_LINEARITY\_MINRMS & This is used to retain receptors that have noisy
-                              or slightly non-linear baselines, or transient
-                              bad baselines (cf. LOWFREQ\_INTERFERENCE).
-                              The parameter is the minimum rms deviation from
-                              linearity, measured in antenna temperature, for
-                              a receptor to be flagged as bad.\\
-
-BASELINE\_LINEARITY\_SCALELENGTH & This is used to reject receptors that have
-                                   non-linear baselines.  It is the smoothing
-                                   scale length in whole pixels.  Features
-                                   narrower than this are filtered out during
-                                   the background-level determination.  It
-				   should be should be odd and sufficiently
-                                   large to remove the noise while not removing
-                                   the low-frequency patterns in the
-				   spectra.\\
-\hline
-CUBE\_WCS & The coordinate system to regrid cubes to.\\
-
-\hline
-MOMENTS & Which moments maps to create.\\
-
-MOMENTS\_LOWER\_VELOCITY & The lower velocity range from which the moments maps
-                           will be created.\\
-
-MOMENTS\_UPPER\_VELOCITY & The upper velocity range from which the moments maps
-                           will be created.\\
-\hline
-PIXEL\_SCALE & The pixel scale, in arcseconds, of cubes.\\
-\hline
-REBIN & List of velocity resolutions to rebin the final cube to.\\
-\hline
-FINAL\_LOWER\_VELOCITY &Lower velocity limit for all the cube products.\\
-
-FINAL\_UPPER\_VELOCITY &Upper velocity limit for all the cube products.\\
-\hline
-SPREAD\_METHOD & The method to use when spreading each input pixel between a
-                 group of neighbouring output pixels when regridding cubes.\\
-
-SPREAD\_WIDTH  & The number of arcsecs on either side of the output position
-                 which receive contributions from the input pixel.\\
-
-SPREAD\_FWHM\_OR\_ZERO & Depending on the spreading method, this parameter
-                         controls the number of arcseconds at which the envelope
-                         of the spreading function goes to zero, or the
-                         full-width at half-maximum for the Gaussian envelope. \\
-\hline
-RESTRICT\_LOWER\_VELOCITY & Trims all data to this lower velocity.\\
-
-RESTRICT\_UPPER\_VELOCITY & Trims all data to this upper velocity.\\
-\hline
-LV\_IMAGE     & Permits creation of a longitude-velocity map via primitive \_CREATE\_LV\_IMAGE\_\\
-LV\_AXIS      & Specify the axis to collapse in the creation of the longitude-velocity map.\\
-LV\_ESTIMATOR & Specify the collapse statistic in the creation of the longitude-velocity map.\\
-\hline
-CREATE\_MOMENTS\_USING\_SNR & If set to true (1), moments maps will be created using a
-                              signal-to-noise map to find emission regions. This is useful
-                              when observations were taken under differing sky conditions
-                              and have different noise levels.\\
-\hline
-CUBE\_MAXSIZE & Controls the maximum size of the reduced cube.\\
-\hline
-CHUNKSIZE     & Sets the maximum sized chunk used to form the group spectral cube.\\
-\hline
-TILE          & A true value (1) performs tiling of the spectral cube so as to restrict
-                the data-processing resource requirements.  Such tiled cubes abut each
-                other in pixel co-ordinates and may be pasted together to form the
-                complete spectral cube. \\
-\hline
-FLATFIELD     & Whether or not to perform flat-fielding.\\
-FLAT\_METHOD  & Flatfield option to ratio voxel by voxel.\\
-FLAT\_LOWER   & Sets the lower limit by which to restrict the velocity range where there
-                is astronomical signal for FLAT\_METHOD.\\
-FLAT\_UPPER   & Sets the upper limit by which to restrict the velocity range where there
-                is astronomical signal for FLAT\_METHOD.\\
-MINSNR        & Allow selection of higher signal-to-noise voxels for FLAT\_METHOD. \\
-\hline
-HIGHFREQ\_INTERFERENCE & If set to true (1) the spectra for each receptor are analysed
-                         to detect high-frequency interference noise, and those spectra
-                         deemed too noisy are excluded from the reduced products.\\
-HIGHFREQ\_INTERFERENCE\_EDGE\_CLIP & Used to reject spectra with high-frequency noise.
-                                     It is the standard deviation to clip the
-                                     summed-edginess profile iteratively in
-                                     order to measure the mean and standard deviation
-                                     of the profile unaffected by bad spectra.\\
-HIGHFREQ\_INTERFERENCE\_THRESH\_CLIP & Used to reject spectra with high-frequency noise.
-                                       This is the number of standard deviations at which
-                                       to threshold the noise profile above its median level.\\
-HIGHFREQ\_RINGING & Whether or not to test for high-frequency ringing in the spectra. This
-                    is where a band of spectra in the time series have the same
-                    oscillation frequency and origin with smoothly varying amplitude over
-                    time.\\
-HIGHFREQ\_RINGING\_MIN\_SPECTRA & Minimum number of good spectra for ringing filtering to be
-                                  attempted. See HIGHFREQ\_RINGING.  The filter needs to be
-                                  able to discriminate between the normal unaffected spectra
-                                  from those with ringing.  The value should be at least a
-                                  few times larger than the number of affected spectra.\\
-\hline
-\end{tabular}
-\end{small}
-\end{table}
-\end{htmlonly}
-
-
-\begin{latexonly}
 \begin{table}[h!]
 \begin{small}
 \begin{tabular}{|p{6.8cm}|p{8.6cm}|}
